# ocaml-winsvc

./: CHANGES  Makefile.in  configure.ac  dune-project  winsvc.opam
.github/workflows/: main.yml
src/: META.in  winsvc.ml  winsvc.mli  winsvc_stubs.c
